@@ -1,6 +1,11 @@
 # ChangeLog for sys-boot/grub
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.190 2012/03/18 06:41:10 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.191 2012/03/20 03:29:08 floppym Exp $
+
+*grub-2.00_beta2-r1 (20 Mar 2012)
+
+  20 Mar 2012; Mike Gilbert <floppym@gentoo.org> +grub-2.00_beta2-r1.ebuild:
+  Fix bug 408196.
 
   18 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta2.ebuild,
   grub-9999.ebuild:
